@@ -1273,31 +1273,29 @@ var CloudCommander, Util,
     DOM.deleteCurrent           = function(pCurrent){
         var lCurrent    = pCurrent || DOM.getCurrentFile(),
             lParent     = lCurrent.parentElement,
-            lName       = DOM.getCurrentName(lCurrent);
+            lName       = DOM.getCurrentName(lCurrent),
+            lUrl        = DOM.getCurrentPath(lCurrent);
         
-        if(lCurrent && lParent){
-            if(lName !== '..'){
-                var lNext       = lCurrent.nextSibling;
-                var lPrevious   = lCurrent.previousSibling;
-                if(lNext)
-                    DOM.setCurrentFile(lNext);
-                else if(lPrevious)
-                    DOM.setCurrentFile(lPrevious);
-                            
-                lParent.removeChild(lCurrent);
-            }
-            else 
-                DOM.addCloudStatus({
-                    code : -1,
-                    msg  : 'Could not remove parrent dir'
-                });
-        }
-        else
-            DOM.addCloudStatus({
-                code : -1,
-                msg  : 'Current file (or parent of current) could not be empty'
+        if(lCurrent && lParent && lName !== '..'){
+            DOM.ajax({
+                method  : 'DELETE',
+                url     : lUrl,
+                error   : DOM.Images.showError,
+                success : function(pData){
+                    var lNext       = lCurrent.nextSibling,
+                        lPrevious   = lCurrent.previousSibling;
+                    
+                    if(lNext)
+                        DOM.setCurrentFile(lNext);
+                    else if(lPrevious)
+                        DOM.setCurrentFile(lPrevious);
+                    
+                    lParent.removeChild(lCurrent);
+                    Util.log(pData);
+                }
             });
-            
+        }
+        
         return lCurrent;
     };
     
