@@ -105,9 +105,10 @@
     function onFS(pParams){
         var lRet = main.checkParams(pParams, ['method']);
         if(lRet){
-            var p   = pParams;
+            var p       = pParams,
+                lQuery  = main.getQuery(p.request);
+            
             p.name  = Util.removeStr(pParams.name, CloudFunc.FS) || '/';
-            console.log(p.name);
             switch(p.method){
                 case 'GET':
                     fs.stat(p.name, function(pError, pStat){
@@ -132,8 +133,7 @@
                     break;
                     
                 case 'PUT':
-                    var lQuery = main.getQuery(p.request);
-                        p.name = Util.removeStr(p.name, '?dir');
+                    p.name = Util.removeStr(p.name, '?dir');
                     
                     if(lQuery === 'dir')
                         fs.mkdir(p.name, function(pError){
@@ -153,10 +153,27 @@
                         p.request.on('end', function(){
                             main.sendResponse(pParams, 'writed: ' + p.name);
                         });
-                                                
+                        
                         //p.request.pipe(process.stdout);
                         p.request.pipe(lWriteStream);
                     }
+                    break;
+                case 'DELETE':
+                    if(lQuery === 'dir')
+                        fs.rmdir(p.name, function(pError){
+                        if(!pError)
+                            main.sendResponse(pParams, 'Folder ' + p.name + ' removed.');
+                        else
+                            main.sendError(pParams, pError);
+                        });
+                    else 
+                        fs.unlink(p.name, function(pError){
+                            if(!pError)
+                                main.sendResponse(pParams, 'File ' + p.name + ' removed.');
+                            else
+                                main.sendError(pParams, pError);
+                        });
+                    
                     break;
                 }
         }
