@@ -178,6 +178,8 @@ generation of json of directory listing.
 
 * Added ability save files on Ctrl+S in CodeMirror.
 
+* Added ability to delete files.
+
 
 2012.12.12, Version 0.1.8
 
